Added the solution options to things that we want to ignore when committing

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@ ehthumbs.db
 Icon?
 Thumbs.db
 
+# Solution options #
+####################
+Calculator.suo
+
 # Build files #
 ###############
 Calculator/Calculator/bin/
